--- a/index.html
+++ b/index.html
@@ -24,12 +24,57 @@
         
         <div class="wrapper">
             <h3 id="time-remain">Time Remaining:<br><span id="timer"></span></h3>
-            <div class="quiz">
-                <h4 id="question">Question</h4>
-                <ul>
-                    <li></li>
-                </ul>
-            </div>
+            <form id="form" action="">
+                <p>What is the King of fruit?</p>
+                <input type="radio" name="question1" value="0" /><strong>Pineapple</strong>
+                <input type="radio" name="question1" value="0" /><strong>Mango</strong>
+                <input type="radio" name="question1" value="0" /><strong>Dragon fruit</strong>
+                <input type="radio" name="question1" value="1" /><strong>Durian</strong>
+
+                <p>Where is fortune cookie invented in?</p>
+                <input type="radio" name="question2" value="0" /><strong>Hong Kong</strong>
+                <input type="radio" name="question2" value="0" /><strong>Canada</strong>
+                <input type="radio" name="question2" value="0" /><strong>USA</strong>
+                <input type="radio" name="question2" value="0" /><strong>Beijing</strong>
+
+                <p>What is an Aussie barbie?</p>
+                <input type="radio" name="question3" value="0" /><strong>Aussie doll</strong>
+                <input type="radio" name="question3" value="1" /><strong>barbeque</strong>
+                <input type="radio" name="question3" value="0" /><strong>pub</strong>
+                <input type="radio" name="question3" value="0" /><strong>shrimp</strong>
+
+                <p>Which chef has the most Michelin stars?</p>
+                <input type="radio" name="question4" value="0" /><strong>Gordon Ramsey</strong>
+                <input type="radio" name="question4" value="0" /><strong>Anne-Sophie Pic</strong>
+                <input type="radio" name="question4" value="1" /><strong>Joel Robuichon</strong>
+                <input type="radio" name="question4" value="0" /><strong>Alain Ducasse</strong>
+
+                <p> Coca-cola first time sold in which American state?</p>
+                <input type="radio" name="question5" value="0" /><strong>Florida</strong>
+                <input type="radio" name="question5" value="1" /><strong>California</strong>
+                <input type="radio" name="question5" value="0" /><strong>Chicago</strong>
+                <input type="radio" name="question5" value="0" /><strong>Georgia</strong>
+
+                <p>Watermelon contains how much percentage of water?</p>
+                <input type="radio" name="question6" value="0" /><strong>99%</strong>
+                <input type="radio" name="question6" value="1" /><strong>92%</strong>
+                <input type="radio" name="question6" value="0" /><strong>84%</strong>
+                <input type="radio" name="question6" value="0" /><strong>75%</strong>
+
+                <p>Which chili is consider to be the hottest in the world?</p>
+                <input type="radio" name="question7" value="0" /><strong>Thai chili</strong>
+                <input type="radio" name="question7" value="0" /><strong>Habanero</strong>
+                <input type="radio" name="question7" value="1" /><strong>Ghost pepper</strong>
+                <input type="radio" name="question7" value="0" /><strong>Carolina Reaper</strong>
+
+                <p>Which soup is most popular in Vietnam?</p>
+                <input type="radio" name="question8" value="0" /><strong>Tho</strong>
+                <input type="radio" name="question8" value="1" /><strong>Pho</strong>
+                <input type="radio" name="question8" value="0" /><strong>Kho</strong>
+                <input type="radio" name="question8" value="0" /><strong>Bho</strong>
+                <br>
+                <input type="submit" value="SUBMIT" id="submit">
+            </form>
         </div>
 
         <div class="summary">
@@ -45,7 +90,7 @@
 
 
 <script src="assets/javascript/app.js">
-</script>    
+</script>
 
 </body>
 </html>
