got it to work when answered and timeout - problem with resetting

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <div class="wrapper">
             <h3 id="time-remain">Time Remaining:<br><span id="timer"></span></h3>
-            <form id="form" action="">
+            <form id="form" name="form1" action="">
                 <p>What is the King of fruit?</p>
                 <input type="radio" name="q1" value="0" /><strong>Pineapple</strong>
                 <input type="radio" name="q1" value="0" /><strong>Mango</strong>
@@ -51,9 +51,9 @@
 
                 <p> Coca-cola first time sold in which American state?</p>
                 <input type="radio" name="q5" value="0" /><strong>Florida</strong>
-                <input type="radio" name="q5" value="1" /><strong>California</strong>
+                <input type="radio" name="q5" value="0" /><strong>California</strong>
                 <input type="radio" name="q5" value="0" /><strong>Chicago</strong>
-                <input type="radio" name="q5" value="0" /><strong>Georgia</strong>
+                <input type="radio" name="q5" value="1" /><strong>Georgia</strong>
 
                 <p>Watermelon contains how much percentage of water?</p>
                 <input type="radio" name="q6" value="0" /><strong>99%</strong>
@@ -81,7 +81,7 @@
             <h5>Game Over and this is how you did:</h5>
             <p>Correct: <span id="correct-answer"></span></p> <br>
             <p>InCorrect: <span id="wrong-answer"></span></p> <br>
-            <p>Unanswered: <span id="no-answer"></span></p> <br>
+            <p>No Answer: <span id="no-answer"></span></p> <br>
            
             <button class="btn btn-success" id="reset">Play Again?</button>        </div>
         </div>
