everything works except submit button

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 <input type="radio" name="q8" value="0" /><strong>Kho</strong>
                 <input type="radio" name="q8" value="0" /><strong>Bho</strong>
                 <br>
-                <input type="submit" value="SUBMIT" id="submit">
+                <input type="submit" value="submit" id="submit">
             </form>
         </div>
 
         <div class="summary">
             <h5>Game Over and this is how you did:</h5>
-            <p>Correct: <span id="correct-answer"></span></p> <br>
-            <p>InCorrect: <span id="wrong-answer"></span></p> <br>
+            <p>Correct Answer: <span id="correct-answer"></span></p> <br>
+            <p>InCorrect Answer: <span id="wrong-answer"></span></p> <br>
             <p>No Answer: <span id="no-answer"></span></p> <br>
            
             <button class="btn btn-success" id="reset">Play Again?</button>        </div>
