all including timer works submit button still an issue

--- a/index.html
+++ b/index.html
@@ -83,12 +83,9 @@
             <p>InCorrect Answer: <span id="wrong-answer"></span></p> <br>
             <p>No Answer: <span id="no-answer"></span></p> <br>
            
-            <button class="btn btn-success" id="reset">Play Again?</button>        </div>
+            <button class="btn btn-success" id="reset">Play Again?</button>        
         </div>
     </div>
-
-
-
 
 
 <script src="assets/javascript/app.js">
